# bigdata-mongo-taxi

./: .gitignore  PROJECT_SUMMARY.md  README.md  docker-compose.yml  mypy.ini  pyproject.toml
architecture/: architecture_diagram.mmd
bigdata_mongo_taxi/: config.py  logging_conf.py
bigdata_mongo_taxi/db/: mongo_client.py  schemas.py
bigdata_mongo_taxi/pipeline/: aggregate.py  clean_transform.py  raw_ingest.py
bigdata_mongo_taxi/viz/: dashboard.py
docs/screenshots/: README.md
tests/: test_aggregations.py  test_pipeline_clean.py  test_schemas.py
